# deepagents

./: .release-please-manifest.json
.github/scripts/: models.py  test_models.py
.github/workflows/: _eval.yml  ci.yml  evals.yml  evals_trials.yml  harbor.yml  release-please.yml
examples/excel-research-agent/: .env.example  2024年全球智能手机市场份额排名.xlsx  README.md  agent.py  programming_languages_2024.xlsx  pyproject.toml  tools.py
examples/rlm_agent/: dashscope_demo.py  pyproject.toml  rlm_agent.py
libs/cli/: CHANGELOG.md  pyproject.toml
libs/cli/deepagents_cli/: _env_vars.py  _version.py  app.py  app.tcss  main.py  remote_client.py  textual_adapter.py  theme.py  update_check.py
libs/cli/deepagents_cli/widgets/: theme_selector.py  update_progress.py  welcome.py
libs/cli/tests/unit_tests/: test_app.py  test_chat_input.py  test_main_args.py  test_model_switch.py  test_theme.py  test_update_check.py  test_update_progress.py  test_welcome.py
libs/deepagents/: CHANGELOG.md  pyproject.toml
libs/deepagents/deepagents/: _version.py  graph.py
libs/evals/: EVAL_CATALOG.md  MODEL_GROUPS.md  pyproject.toml
libs/evals/deepagents_evals/: radar.py
libs/evals/deepagents_harbor/: backend.py  langsmith.py  langsmith_environment.py
libs/evals/tests/evals/: conftest.py  pytest_reporter.py  test_hitl.py  test_tool_usage_incident_graph.py
libs/evals/tests/evals/memory_agent_bench/: data_utils.py
libs/evals/tests/unit_tests/: test_category_tagging.py  test_harbor_backend.py  test_pytest_reporter.py
libs/partners/quickjs/: CHANGELOG.md  pyproject.toml
libs/partners/quickjs/langchain_quickjs/: _format.py  _prompt.py  _ptc.py  _repl.py  middleware.py
libs/partners/quickjs/tests/unit_tests/: test_end_to_end.py  test_end_to_end_async.py  test_ptc.py
libs/partners/quickjs/tests/unit_tests/smoke_tests/snapshots/: quickjs_system_prompt_mixed_foreign_functions.md
prd/pending/: agent-platform-design.md
