[project]
name = "repl-swarm-example"
version = "0.1.0"
description = "REPL swarm example — fan out subagent tasks from inside the REPL via a skill module"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.2.6",
    "langchain-quickjs",
    "langchain-anthropic>=0.3.0",
    "socksio>=1.0.0",
    "langchain-openai>=1.2.1",
    "langchain-community>=0.4.1",
    "dashscope>=1.25.17",
    "pysocks>=1.7.1",
]

[tool.uv.sources]
deepagents = { path = "../../libs/deepagents", editable = true }
langchain-quickjs = { path = "../../libs/partners/quickjs", editable = true }
