[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-quickjs"
description = "JavaScript REPL middleware for deepagents"
license = { text = "MIT" }
readme = "README.md"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

version = "0.1.1"
requires-python = ">=3.11,<4.0"
keywords = ["deepagents", "langchain", "langgraph", "repl", "javascript", "quickjs", "middleware"]

dependencies = [
    "deepagents",
    "quickjs-rs>=0.1.2,<0.2.0",
    "langchain>=1.2.15,<2.0.0",
    "langchain-core>=1.3.1,<2.0.0",
    "langgraph>=1.1.10,<2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["langchain_quickjs"]

[project.urls]
Homepage = "https://github.com/langchain-ai/deepagents/tree/main/libs/partners/quickjs"
Repository = "https://github.com/langchain-ai/deepagents"
Documentation = "https://github.com/langchain-ai/deepagents/tree/main/libs/partners/quickjs"

[dependency-groups]
test = [
    "langgraph-checkpoint-postgres>=3.0.0,<4.0.0",
    "psycopg[binary]>=3.0.0,<4.0.0",
    "pytest>=7.3.0,<10.0.0",
    "pytest-benchmark",
    "pytest-codspeed>=4.4.0,<5.0.0",
    "pytest-cov",
    "pytest-socket",
    "pytest-xdist",
    "pytest-timeout>=2.3.1,<3.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-watcher>=0.3.4,<1.0.0",
    "ruff>=0.13.1,<0.16.0",
    "testcontainers[postgres]>=4.13.2,<5.0.0",
    "ty>=0.0.1,<1.0.0",
    "twine",
    "build",
]

[tool.uv.sources]
deepagents = { path = "../../deepagents", editable = true }

[tool.uv]
constraint-dependencies = ["urllib3>=2.6.3"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ty.environment]
python-version = "3.11"
extra-paths = ["../../deepagents"]

[tool.ty.rules]
# https://docs.astral.sh/ty/rules/
division-by-zero = "error"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # Messes with the formatter
    "ISC001",  # Messes with the formatter
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed — too strict for generic wrappers
    "ASYNC109",  # StructuredTool async wrapper should mirror sync tool parameters
    "PLR0911",  # Too many return statements — branchy marshalers (JSON→TS, value formatting) are intentionally flat
    "PLR0913",  # Too many arguments — middleware constructors legitimately expose many knobs
]
extend-safe-fixes = ["PLR6201"]

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-var-parameters = true  # ignore missing documentation for *args and **kwargs parameters

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5"
testpaths = ["tests"]
markers = [
    "requires: mark tests as requiring a specific library",
    "compile: mark placeholder test used to compile integration tests without running them",
    "scheduled: mark tests to run in scheduled testing",
    "benchmark: mark benchmark tests",
    "memory_benchmark: mark benchmarks intended for CodSpeed memory mode",
    "throughput_benchmark: mark throughput benchmarks",
]
asyncio_mode = "auto"
filterwarnings = []

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "D",
    "ANN",
    "ARG",
    "PLR2004",
    "FBT",
    "INP001",
    "SLF001",
    "PLC0415",  # Inline imports inside test functions (for per-test isolation) are idiomatic
]
